Curriculum Creation Completed.
Curriculum almost completed excluding the use of programCurriuclum Table creation.

working on administrative data management

--- a/Assets/Stylesheets/Master.css
+++ b/Assets/Stylesheets/Master.css
@@ -400,6 +400,13 @@ body::-webkit-scrollbar-corner {
 
 }
 
+.blur-filter {
+    -webkit-filter: blur(2px);
+    -moz-filter: blur(2px);
+    -o-filter: blur(2px);
+    -ms-filter: blur(2px);
+    filter: blur(2px);
+}
 
 /** Uploader Design */
 
