--- a/Templates/Components/logo-tester.html
+++ b/Templates/Components/logo-tester.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="../node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
