Student Import Design

--- a/Templates/Components/logo-tester.html
+++ b/Templates/Components/logo-tester.html
@@ -104,7 +104,7 @@
         }
 
 
-        /* Demo purposes only */
+        /* Main-Import-Design-2 purposes only */
 
         body {
             background-color: #212121;
