Modification For Course profile
Implementation for course coordinator and error while updating PLO-CLO MAPPING.

--- a/Assets/Stylesheets/MasterInject.css
+++ b/Assets/Stylesheets/MasterInject.css
@@ -109,8 +109,7 @@
 
 
 .assessment-wrap, .cprofile-content-division, .row-flex {
-    @apply flex flex-row max-w-full items-center
-    mx-2;
+    @apply flex flex-row max-w-full items-center mx-2;
 }
 
 .assessment-wrap > h3 {
