FYP Evaluation Finalization I
Changing the Backend Implementation for DB OneEyeOwl

--- a/Assets/Stylesheets/MasterInject.css
+++ b/Assets/Stylesheets/MasterInject.css
@@ -155,7 +155,8 @@
 }
 
 .lweek-column {
-    @apply border border-t-0 border-gray-300 min-w-full min-h-full;
+    @apply border-none ring-1 ring-catalystLight-e1 min-w-full min-h-full;
+/*    border border-t-0 border-gray-300*/
 }
 
 .cprofile-column {
